--- a/TheatreMVC/TheatreMVC/TheatreMVC.csproj
+++ b/TheatreMVC/TheatreMVC/TheatreMVC.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SpectaclesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -294,6 +295,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Spectacles\Create.cshtml" />
+    <Content Include="Views\Spectacles\Delete.cshtml" />
+    <Content Include="Views\Spectacles\Details.cshtml" />
+    <Content Include="Views\Spectacles\Edit.cshtml" />
+    <Content Include="Views\Spectacles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
